correction align1

--- a/style.css
+++ b/style.css
@@ -18,32 +18,16 @@
   border: 5px solid blue;
 }
 .section1{
-  display:flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
+
   border: 5px solid black;
 }
-.sec-gauche1{
-  border: 5px solid #999;
-  flex-shrink:0;
-}
-.sec-droite1{
-  border: 5px solid #666;
+span{
+  display: block;
   margin-left: 50px;
+  border: 5px solid yellow;
 }
 .section2{
-display: flex;
-flex-wrap: nowrap;
-flex-direction: row;
 border: 5px solid pink;
-}
-.sec-gauche2{
-  border: 5px solid purple;
-  flex-shrink:0;
-}
-.sec-droite2{
-  border: 5px solid green;
-  margin-left: 50px
 }
 .section3{
   display: flex;
